...
						{invitationIcon}
						<Text style = {[buttonColor.invitation, {paddingTop:4,fontSize:10}]}>
						Invitation</Text>
						</View>
					</TouchableWithoutFeedback>
					<TouchableWithoutFeedback 
						testID = 'profileButton'
						onPress = {() => this._switchContent('Profile')}
					>
						<View style = {s.switchButton}>
						{profileIcon}
						<Text style = {[buttonColor.profile, {paddingTop:4,fontSize:10}]}>
						Me</Text>
...
